ensure backgroud color visible added zindex in nav

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,9 @@ body{
     .container{
       flex:1;
     }
+    .navbar-collapse {
+      background-color: white; /* Ensure the dropdown has a white background */
+  }
     
     /* NAVBAR */
     .navbar{
